fixed some align

--- a/public/src/vue/less/_modal.less
+++ b/public/src/vue/less/_modal.less
@@ -318,6 +318,11 @@
     .bg-bleuvert; 
     color: @c-bleumarine;
     color: white;
+
+    > * {
+      display: inline-block;
+      vertical-align: middle;
+    }
   }
 }
 
